laborations/lab1/test/bad/bad134.cc
int main() {
	int & + 1;
}
